--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Package Lamda Function
       run: |
-        cd ../../lamda 
+        cd ../lambda
         zip -r9 lambda_function_payload.zip lamda_function.py 
         mv lambda_function_payload.zip ../terraform/
         cd ../terraform
