--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Package Lamda Function
       run: |
         cd ../lambda
-        zip -r9 lambda_function_payload.zip lamda_function.py 
+        zip -r9 lambda_function_payload.zip lambda_function.py
         mv lambda_function_payload.zip ../terraform/
         cd ../terraform
 
