--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,10 +1,9 @@
 name: 'Terraform'
 
 on:
-  # push:
-  #   branches: [ "master" ]  
+  push:
+    branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]  
 
 permissions:
   contents: read
@@ -15,16 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
 
-
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
         shell: bash
-        working-directory: ./terraform
+         working-directory: ./terraform
 
     steps:
+    # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v4
-
 
     - name: Package Lambda Function
       run: |
@@ -33,25 +32,31 @@ jobs:
         mv lambda_function_payload.zip ../terraform/
         cd ../terraform
 
+
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
 
+    # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: terraform fmt -check
-      continue-on-error: true
 
     - name: Terraform Validate
       run: terraform validate
-
+      
+    # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -no-color -input=false
-      continue-on-error: true 
+      run: terraform plan -input=false
+      continue-on-error: true
 
+      # On push to "master", build or change infrastructure according to Terraform configuration files
+      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false 
+      if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
+      run: terraform apply -auto-approve -input=false
