--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -51,7 +51,7 @@ jobs:
       
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false -lock=false
+      run: terraform plan -input=false -lock=false -compact-warnings
       continue-on-error: true
 
       # On push to "master", build or change infrastructure according to Terraform configuration files
