--- a/src/.env.local
+++ b/src/.env.local
@@ -1,4 +1,4 @@
-REACT_APP_AWS_ACCESS_KEY_ID=AKIA6ODU6MVFFOXLACXD
-REACT_APP_AWS_SECRET_ACCESS_KEY=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
-REACT_APP_AWS_S3_BUCKET=CloudHubActions-s3-file-in
-REACT_APP_AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=AKIA6ODU6MVFFOXLACXD
+AWS_SECRET_ACCESS_KEY=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
+AWS_S3_BUCKET=CloudHubActions-s3-file-in
+AWS_REGION=us-east-1
